--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
-    tools:context=".MainActivity"
-    android:id="@+id/WelcomeLayout">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@color/black"
+tools:context=".MainActivity"
+android:id="@+id/WelcomeLayout">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="236dp"
-        app:srcCompat="@drawable/banner" />
+<ImageView
+    android:id="@+id/imageView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    app:srcCompat="@drawable/banner" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="277dp"
-        android:layout_height="83dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="67dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginBottom="557dp"
-        android:fontFamily="@font/roboto_slab_bold"
-        android:text="@string/title"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="139dp" />
+<TextView
+    android:id="@+id/textView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:fontFamily="@font/roboto_slab_bold"
+    android:layout_centerHorizontal="true"
+    android:text="@string/title"
+    android:textColor="@color/white"
+    android:textSize="40sp"
+    android:layout_above="@id/imageView"
+    />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="409dp"
-        android:layout_height="58dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="199dp"
-        android:fontFamily="@font/capriola"
-        android:text="@string/tagline"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="516dp" />
+<TextView
+    android:id="@+id/textView3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:fontFamily="@font/capriola"
+    android:text="@string/tagline"
+    android:textAlignment="center"
+    android:textColor="@color/white"
+    android:textSize="24sp"
+    android:layout_below="@id/imageView"/>
 
 </RelativeLayout>
