--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="colorPrimary">#57a0d3</color>
+    <color name="colorPrimaryDark">#729cba</color>
+    <color name="colorPrimaryDarker">#57a0d3</color>
+    <color name="colorSecondary">#d38257</color>
+    <color name="colorSecondaryDark">#d36357</color>
+    <color name="colorDelete">#ff414d</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
