--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#292929">
 
     <TextView
         android:id="@+id/tasksText"
@@ -11,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:text="To-Do List"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/colorPrimaryDarker"
+        android:backgroundTint="@color/colorSecondary"
         android:contentDescription="ToDoList Floating Action Button"
         android:src="@drawable/ic_baseline_fabadd"
         app:layout_constraintBottom_toBottomOf="parent"
