--- a/app/src/main/res/layout/to_do_list_task_layout.xml
+++ b/app/src/main/res/layout/to_do_list_task_layout.xml
@@ -3,6 +3,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#333333"
     app:cardElevation="4dp"
     app:cardCornerRadius="8dp"
     android:layout_marginHorizontal="16dp"
