--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -6,13 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".timer">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/timerToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="350dp"
         android:layout_height="350dp"
+        android:layout_marginTop="70dp"
         android:indeterminateOnly="false"
         android:progressDrawable="@drawable/timer_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,35 +46,39 @@
             android:layout_height="wrap_content"
             android:text="Work"
             android:textColor="@color/black"
-            android:textSize="40sp"
+            android:textSize="30sp"
             />
         <TextView
             android:id="@+id/timer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:00"
+            android:text="0:00:0"
             android:textColor="@color/black"
-            android:textSize="60sp"
+            android:textSize="45sp"
             />
     </LinearLayout>
 
     <LinearLayout
 
-        android:layout_width="wrap_content"
+        android:id="@+id/linearLayout"
+        android:weightSum="2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progress_bar">
+        app:layout_constraintTop_toBottomOf="@id/progress_bar"
+        android:paddingHorizontal="16dp">
 
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/timer_start"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:paddingHorizontal="20dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:paddingHorizontal="16dp"
             android:paddingVertical="10dp"
             android:text="Start"
             android:textSize="20sp"
@@ -77,10 +91,11 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/timer_reset"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:paddingHorizontal="20dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:paddingHorizontal="16dp"
             android:paddingVertical="10dp"
             android:text="Reset"
             android:textSize="20sp"
@@ -91,5 +106,17 @@
             app:strokeWidth="2dp" />
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:srcCompat="@drawable/ic_settings" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
