--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4d648d</color>
+    <color name="colorPrimary">#ff6f69</color>
     <color name="colorPrimaryDark">#2a4d69</color>
     <color name="colorPrimaryDarker">#283655</color>
     <color name="colorSecondary">#f4a261</color>
