--- a/app/src/main/res/layout/note_misc.xml
+++ b/app/src/main/res/layout/note_misc.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/noteMiscLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/noteMiscLayout"
     android:background="@drawable/background_misc"
+    android:orientation="vertical"
     app:behavior_peekHeight="@dimen/_40sdp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
@@ -14,11 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:fontFamily="@font/yantramanav"
-        android:includeFontPadding="false"
         android:gravity="center"
+        android:includeFontPadding="false"
         android:text="@string/noteMiscellaneous"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/_13ssp"/>
+        android:textSize="@dimen/_13ssp" />
+
     <LinearLayout
         android:id="@+id/layoutNoteColor"
         android:layout_width="match_parent"
@@ -26,15 +27,18 @@
         android:layout_margin="@dimen/_10sdp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
+
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <View
                 android:id="@+id/viewColor1"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:background="@drawable/background_note_color_1"/>
+                android:background="@drawable/background_note_color_1" />
+
             <ImageView
                 android:id="@+id/imageColor1"
                 android:layout_width="@dimen/_35sdp"
@@ -44,15 +48,18 @@
                 android:src="@drawable/ic_done"
                 app:tint="@color/colorWhite" />
         </FrameLayout>
+
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <View
                 android:id="@+id/viewColor2"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:background="@drawable/background_note_color_2"/>
+                android:background="@drawable/background_note_color_2" />
+
             <ImageView
                 android:id="@+id/imageColor2"
                 android:layout_width="@dimen/_35sdp"
@@ -61,15 +68,18 @@
                 android:padding="@dimen/_10sdp"
                 app:tint="@color/colorWhite" />
         </FrameLayout>
+
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <View
                 android:id="@+id/viewColor3"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:background="@drawable/background_note_color_3"/>
+                android:background="@drawable/background_note_color_3" />
+
             <ImageView
                 android:id="@+id/imageColor3"
                 android:layout_width="@dimen/_35sdp"
@@ -78,15 +88,18 @@
                 android:padding="@dimen/_10sdp"
                 app:tint="@color/colorWhite" />
         </FrameLayout>
+
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <View
                 android:id="@+id/viewColor4"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:background="@drawable/background_note_color_4"/>
+                android:background="@drawable/background_note_color_4" />
+
             <ImageView
                 android:id="@+id/imageColor4"
                 android:layout_width="@dimen/_35sdp"
@@ -95,15 +108,18 @@
                 android:padding="@dimen/_10sdp"
                 app:tint="@color/colorWhite" />
         </FrameLayout>
+
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <View
                 android:id="@+id/viewColor5"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:background="@drawable/background_note_color_5"/>
+                android:background="@drawable/background_note_color_5" />
+
             <ImageView
                 android:id="@+id/imageColor5"
                 android:layout_width="@dimen/_35sdp"
@@ -112,6 +128,7 @@
                 android:padding="@dimen/_10sdp"
                 app:tint="@color/colorWhite" />
         </FrameLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -119,10 +136,11 @@
             android:includeFontPadding="false"
             android:text="@string/noteChooseColor"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/_13ssp"/>
+            android:textSize="@dimen/_13ssp" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/layoutAddImage"
         android:layout_width="match_parent"
@@ -137,6 +155,7 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_image"
             app:tint="@color/colorIcons" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -145,8 +164,9 @@
             android:includeFontPadding="false"
             android:text="@string/note_add_image"
             android:textColor="@color/colorIcons"
-            android:textSize="@dimen/_12ssp"/>
+            android:textSize="@dimen/_12ssp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/layoutAddURL"
         android:layout_width="match_parent"
@@ -163,18 +183,20 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_web"
             app:tint="@color/colorIcons" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
-            android:includeFontPadding="false"
             android:fontFamily="@font/capriola"
+            android:includeFontPadding="false"
             android:text="@string/note_add_url"
             android:textColor="@color/colorIcons"
-            android:textSize="@dimen/_12ssp"/>
+            android:textSize="@dimen/_12ssp" />
 
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/layoutDeleteNote"
         android:layout_width="match_parent"
@@ -183,8 +205,8 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center_vertical"
-        android:visibility="gone"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="@dimen/_22sdp"
@@ -192,6 +214,7 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_delete"
             app:tint="@color/colorWhite" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -200,7 +223,7 @@
             android:includeFontPadding="false"
             android:text="@string/note_delete_note"
             android:textColor="@color/colorDelete"
-            android:textSize="@dimen/_12ssp"/>
+            android:textSize="@dimen/_12ssp" />
 
     </LinearLayout>
 
