--- a/app/src/main/res/layout/note_item_container.xml
+++ b/app/src/main/res/layout/note_item_container.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/noteLayout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/_12sdp"
-    android:layout_marginTop="@dimen/_12sdp"
-    android:background="@drawable/background_note">
+    android:layout_margin="8dp"
+    android:background="@drawable/background_note"
+    android:orientation="vertical">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageNote"
@@ -15,43 +14,36 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:visibility="gone"
-        app:riv_corner_radius_top_left="@dimen/_10sdp"
-        app:riv_corner_radius_top_right="@dimen/_10sdp"/>
+        app:riv_corner_radius_top_left="10dp"
+        app:riv_corner_radius_top_right="10dp" />
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="8dp"
         android:fontFamily="@font/roboto_slab_bold"
-        android:includeFontPadding="false"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/_13ssp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textSubtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_4sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_4sdp"
-        android:fontFamily="@font/yantramanav"
-        android:includeFontPadding="false"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="8dp"
+        android:fontFamily="@font/roboto_slab_bold"
         android:textColor="@color/colorNoteSubtitleText"
-        android:textSize="@dimen/_12ssp"/>
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/textDateTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:fontFamily="@font/yantramanav"
-        android:includeFontPadding="false"
+        android:layout_margin="8dp"
+        android:fontFamily="@font/roboto_slab_bold"
         android:textColor="@color/colorNoteSubtitleText"
-        android:textSize="@dimen/_7ssp"/>
+        android:textSize="10sp" />
 
 </LinearLayout>
