--- a/app/src/main/res/layout/to_do_list_task_layout.xml
+++ b/app/src/main/res/layout/to_do_list_task_layout.xml
@@ -1,14 +1,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#333333"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp">
-
+    android:layout_marginVertical="8dp"
+    android:background="#333333"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
 
         <CheckBox
@@ -16,12 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:paddingHorizontal="8dp"
+            android:layout_margin="8dp"
             android:buttonTint="@color/colorPrimary"
-            tools:text="Dummy Test"
+            android:paddingHorizontal="8dp"
             android:textSize="18sp"
-            android:layout_margin="8dp"/>
-
+            tools:text="Dummy Test" />
 
 
 </androidx.cardview.widget.CardView>
