--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff6f69</color>
-    <color name="colorPrimaryDark">#2a4d69</color>
-    <color name="colorPrimaryDarker">#283655</color>
+    <color name="colorPrimary">#f4a261</color>
+    <color name="colorPrimaryDark">#f4a261</color>
+    <color name="colorPrimaryDarker">#f4a261</color>
     <color name="colorSecondary">#f4a261</color>
     <color name="colorSecondaryDark">#e76f51</color>
     <color name="colorDelete">#ff4842</color>
+    <color name="colorEdit">#6591FF</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="bgColor">#2d2d2f</color>
+    <color name="toolbarColor">#2d2d2f</color>
 
     <!--<! Notepad Colors__>-->
     <color name="colorSearchIcon">#dbdbdb</color>
