Minor changes and cleanup

--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -17,9 +17,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ToDo List"
+        android:text="To do"
         android:textColor="@color/white"
-        android:textSize="32sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/todo_toolbar"
         app:layout_constraintEnd_toEndOf="@+id/todo_toolbar"
@@ -50,6 +50,7 @@
         android:backgroundTint="@color/colorSecondary"
         android:contentDescription="ToDoList Floating Action Button"
         android:src="@drawable/ic_add"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
