--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -4,16 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgColor"
     tools:context=".timer">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/timerToolbar"
+        android:id="@+id/timer_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pomodoro"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/timer_toolbar"
+        app:layout_constraintEnd_toEndOf="@+id/timer_toolbar"
+        app:layout_constraintStart_toStartOf="@+id/timer_toolbar"
+        app:layout_constraintTop_toTopOf="@+id/timer_toolbar" />
+
 
 
     <ProgressBar
@@ -45,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Work"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             />
         <TextView
@@ -53,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0:00:0"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="45sp"
             />
     </LinearLayout>
@@ -84,8 +98,8 @@
             android:textSize="20sp"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_play"
-            app:iconTint="@color/black"
-            app:strokeColor="@color/black"
+            app:iconTint="@color/colorPrimary"
+            app:strokeColor="@color/colorPrimary"
             app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -101,8 +115,8 @@
             android:textSize="20sp"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_reset"
-            app:iconTint="@color/black"
-            app:strokeColor="@color/black"
+            app:iconTint="@color/colorPrimary"
+            app:strokeColor="@color/colorPrimary"
             app:strokeWidth="2dp" />
 
     </LinearLayout>
