--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="colorEdit">#6591FF</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="bgColor">#2d2d2f</color>
+    <color name="bgColor">#000000</color>
     <color name="toolbarColor">#2d2d2f</color>
 
     <!--<! Notepad Colors__>-->
